--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -10,33 +10,34 @@
                     <!-- Username field -->
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Username</mat-label>
-                        <input [(ngModel)]="user.userName" name="userName" matInput placeholder="Username">
-                        <mat-hint>User name must be unique!</mat-hint>
+                        <input required [(ngModel)]="user.userName" name="userName" matInput placeholder="Username">
+                        <mat-hint>User name must be</mat-hint>
                     </mat-form-field>
-                    <!-- Username field -->
+                    <!-- Password field -->
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Password</mat-label>
-                        <input [(ngModel)]="user.password" name="password" matInput type="password"
+                        <input required [(ngModel)]="user.password" name="password" matInput type="password"
                             placeholder="Password">
                     </mat-form-field>
-                    <!-- Username field -->
+                    <!-- First name field -->
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>First Name</mat-label>
-                        <input [(ngModel)]="user.firstName" name="firstName" matInput placeholder="First Name">
+                        <input required [(ngModel)]="user.firstName" name="firstName" matInput placeholder="First Name">
                     </mat-form-field>
-                    <!-- Username field -->
+                    <!-- Last name field -->
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Last Name</mat-label>
-                        <input [(ngModel)]="user.lastName" name="lastName" matInput placeholder="Last Name">
+                        <input required [(ngModel)]="user.lastName" name="lastName" matInput placeholder="Last Name">
                     </mat-form-field>
-                    <!-- Username field -->
+                    <!-- Email field -->
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Email Address</mat-label>
-                        <input [(ngModel)]="user.email" name="email" matInput type="email" placeholder="Email">
+                        <input required [(ngModel)]="user.email" name="email" matInput type="email" placeholder="Email">
                     </mat-form-field>
+                    <!-- Phone number field -->
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Phone Number</mat-label>
-                        <input [(ngModel)]="user.phone" name="phone" matInput type="number" placeholder="Phone">
+                        <input required [(ngModel)]="user.phone" name="phone" matInput type="number" placeholder="Phone">
                     </mat-form-field>
                     <div class="container text-center">
                         <button mat-raised-button color="primary" class="col-md-5 offset-md-1"
