--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,52 +1,60 @@
 <div class="bootstrap-wrapper">
     <div class="container">
-        <div class="row">
+        <div class="row mt20">
             <div class="col-md-6 offset-md-3">
-                <!-- <div class="container text-center">
+                <mat-card>
+                    <!-- <div class="container text-center">
                     <img src="../../../assets/logo.png" alt="" >
                 </div> -->
-                <h2 class="text-center">Register Here !</h2>
-                <form (ngSubmit)="registerUser()">
-                    <!-- Username field -->
-                    <mat-form-field class="full-width" appearance="outline">
-                        <mat-label>Username</mat-label>
-                        <input required [(ngModel)]="user.userName" name="userName" matInput placeholder="Username">
-                        <mat-hint>User name must be</mat-hint>
-                    </mat-form-field>
-                    <!-- Password field -->
-                    <mat-form-field class="full-width" appearance="outline">
-                        <mat-label>Password</mat-label>
-                        <input required [(ngModel)]="user.password" name="password" matInput type="password"
-                            placeholder="Password">
-                    </mat-form-field>
-                    <!-- First name field -->
-                    <mat-form-field class="full-width" appearance="outline">
-                        <mat-label>First Name</mat-label>
-                        <input required [(ngModel)]="user.firstName" name="firstName" matInput placeholder="First Name">
-                    </mat-form-field>
-                    <!-- Last name field -->
-                    <mat-form-field class="full-width" appearance="outline">
-                        <mat-label>Last Name</mat-label>
-                        <input required [(ngModel)]="user.lastName" name="lastName" matInput placeholder="Last Name">
-                    </mat-form-field>
-                    <!-- Email field -->
-                    <mat-form-field class="full-width" appearance="outline">
-                        <mat-label>Email Address</mat-label>
-                        <input required [(ngModel)]="user.email" name="email" matInput type="email" placeholder="Email">
-                    </mat-form-field>
-                    <!-- Phone number field -->
-                    <mat-form-field class="full-width" appearance="outline">
-                        <mat-label>Phone Number</mat-label>
-                        <input required [(ngModel)]="user.phone" name="phone" matInput type="number" placeholder="Phone">
-                    </mat-form-field>
-                    <div class="container text-center">
-                        <button mat-raised-button color="primary" class="col-md-5 offset-md-1"
-                            type="submit">Register</button>
-                        <button mat-raised-button color="accent" class="col-md-5 offset-md-1"
-                            type="reset">Clear</button>
-                    </div>
-
-                </form>
+                    <h2 class="text-center">Register Here !</h2>
+                    <form (ngSubmit)="registerUser()">
+                        <div class="container">
+                            <!-- Username field -->
+                            <mat-form-field class="full-width" appearance="outline">
+                                <mat-label>Username</mat-label>
+                                <input required [(ngModel)]="user.userName" name="userName" matInput
+                                    placeholder="Username">
+                                <mat-hint>User name is required</mat-hint>
+                            </mat-form-field>
+                            <!-- Password field -->
+                            <mat-form-field class="full-width" appearance="outline">
+                                <mat-label>Password</mat-label>
+                                <input required [(ngModel)]="user.password" name="password" matInput type="password"
+                                    placeholder="Password">
+                            </mat-form-field>
+                            <!-- First name field -->
+                            <mat-form-field class="full-width" appearance="outline">
+                                <mat-label>First Name</mat-label>
+                                <input required [(ngModel)]="user.firstName" name="firstName" matInput
+                                    placeholder="First Name">
+                            </mat-form-field>
+                            <!-- Last name field -->
+                            <mat-form-field class="full-width" appearance="outline">
+                                <mat-label>Last Name</mat-label>
+                                <input required [(ngModel)]="user.lastName" name="lastName" matInput
+                                    placeholder="Last Name">
+                            </mat-form-field>
+                            <!-- Email field -->
+                            <mat-form-field class="full-width" appearance="outline">
+                                <mat-label>Email Address</mat-label>
+                                <input required [(ngModel)]="user.email" name="email" matInput type="email"
+                                    placeholder="Email">
+                            </mat-form-field>
+                            <!-- Phone number field -->
+                            <mat-form-field class="full-width" appearance="outline">
+                                <mat-label>Phone Number</mat-label>
+                                <input required [(ngModel)]="user.phone" name="phone" matInput type="number"
+                                    placeholder="Phone">
+                            </mat-form-field>
+                        </div>
+                        <div class="container mb20">
+                            <button mat-raised-button color="primary" class="col-md-5 offset-md-1"
+                                type="submit">Register</button>
+                            <button mat-raised-button color="accent" class="col-md-5 offset-md-1"
+                                type="reset">Reset</button>
+                        </div>
+                    </form>
+                </mat-card>
             </div>
         </div>
     </div>
