--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,13 @@
-<!-- <p>This is Navbar!!</p> -->
+<mat-toolbar color="primary">
+    <a routerLink="/" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+        <mat-icon>menu_book</mat-icon>
+    </a>
+    <span>Pariksha Portal</span>
+    <span class="example-spacer"></span>
+    <a [routerLink]="'/login'" class="example-icon favorite-icon">
+        Login
+    </a>
+    <a [routerLink]="'/register'" class="example-icon favorite-icon ml10 mr10">
+        Register
+    </a>
+</mat-toolbar>
