--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,9 @@
-<h2>Welcome to Exam Portal !!</h2>
+<div class="bootstrap-wrapper">
+    <div class="container">
+        <div class="row mt20">
+            <div class="col-md-6 offset-md-3 text-center">
+                Welcome to home page !!
+            </div>
+        </div>
+    </div>
+</div>
