--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="bootstrap-wrapper">
     <div class="container">
-        <div class="row mt20">
+        <div class="row">
             <div class="col-md-6 offset-md-3">
                 <mat-card>
                     <!-- <div class="container text-center">
@@ -14,7 +14,6 @@
                                 <mat-label>Username</mat-label>
                                 <input required [(ngModel)]="user.userName" name="userName" matInput
                                     placeholder="Username">
-                                <mat-hint>User name is required</mat-hint>
                             </mat-form-field>
                             <!-- Password field -->
                             <mat-form-field class="full-width" appearance="outline">
